# patines

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
scooter-solver/: laboratory.py
scooter-solver/contest/: solver.py  strategies.py  utility_functions.py
src/bayesian_scooters/: solver.py  strategies.py
tests/: test_solver.py  test_strategies.py
