[tool.poetry]
name = "bayesian-scooters"
version = "0.1.0"
description = "Use case for exploring bayesian decision theory."
authors = ["Jorge Rotter <jorgearotter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
seaborn = "^0.10.0"
jupyter = "^1.0.0"
notebook = "^6.0.3"
numpy = "^1.18.3"
jupyterlab = "^2.1.0"
flake8-black = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8 = "^3.7.9"
flake8-isort = "^3.0.0"
mypy = "^0.770"
flake8-annotations = "^2.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["bayesian_scooters"]

[tool.coverage.report]
show_missing = true
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
